--- a/lesson3/sitemap.html
+++ b/lesson3/sitemap.html
@@ -36,7 +36,7 @@
                     </ul>
                 </nav>
                 <body>
-                    <img src="images/map.png" alt="domain info">
+                    <img src="../images/map.png" alt="domain info">
                 </body>
             <footer class="footer">
                 <p>
