--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>    
     <header>
-        <img src="chamber/images/index.png" alt="">
+        <img src="/chamber/images/index.png" alt="">
         <div class="title">
             <h1>Flipton Chamber of Commerce</h1>
             <h2>We put the flip in Flipton.</h2>
