--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>    
     <header>
-        <img src="/chamber/images/index.png" alt="">
+        <img src="../chamber/images/index.png" alt="">
         <div class="title">
             <h1>Flipton Chamber of Commerce</h1>
             <h2>We put the flip in Flipton.</h2>
@@ -24,7 +24,7 @@
     <nav>
         <ul class="navigation">
             <li><a href="#" id="hamBtn">&#9776; Menu</a></li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="chamber/index.html">Home</a></li>
             <li><a href="#"></a>News Release</li>
             <li><a href="#"></a>Join</li>
             <li><a href="#"></a>Event</li>
