--- a/chamber/index.html
+++ b/chamber/index.html
@@ -24,16 +24,18 @@
     <nav>
         <ul class="navigation">
             <li><a href="#" id="hamBtn">&#9776; Menu</a></li>
-            <li><a href="chamber/index.html">Home</a></li>
-            <li><a href="#"></a>News Release</li>
-            <li><a href="#"></a>Join</li>
-            <li><a href="#"></a>Event</li>
-            <li><a href="#"></a>Weather</li>
-            <li><a href="#"></a>Contact Us</li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="/business.html"></a>Business Listings</li>
+            <li><a href="/contactus.html"></a>Contact Us</li>
+            <li><a href="/directory.html"></a>Directory</li>
+            <li><a href="/sponsors.html"></a>Sponsors</li>
         </ul>
     </nav>
     <main>
         <h2>Information</h2>
+        <div class="temporary">
+            <p>Hero with site name and call to action</p>
+        </div>
         <div class="temporary">
             <p>News Release</p>
         </div>
@@ -47,7 +49,13 @@
             <p>Weather</p>
         </div>
         <div class="temporary">
-            <p>Contact Us</p>
+            <p>Spotlight 1</p>
+        </div>
+        <div class="temporary">
+            <p>Spotlight 2</p>
+        </div>
+        <div class="temporary">
+            <p>Spotlight 3</p>
         </div>
     </main>
     <footer class="footer">
