--- a/chamber/business.html
+++ b/chamber/business.html
@@ -23,9 +23,8 @@
     </header>
     <nav>
         <ul class="navigation">
-            <li><a href="#" id="hamBtn">&#9776; Menu</a></li>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="chamber/business.html"></a>Business Listings</li>
+            <li><a href="../index.html" id="hamBtn">&#9776; Home</a></li>
+            <li><a href="/chamber/business.html"></a>Business Listings</li>
             <li><a href="/contactus.html"></a>Contact Us</li>
             <li><a href="/directory.html"></a>Directory</li>
             <li><a href="/sponsors.html"></a>Sponsors</li>
