--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li>Lesson 2: <a href="lesson2/designprinciples.html">Principles of Design</a></li>
                 <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
                 <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page Build</a></li>
+                <li>Lesson 5: <a href="lesson5/bom.html">DOM Manipulation</a></li>
                 <li>Lesson 5: <a href="lesson5/">Title</a></li>
                 <li>Lesson 6: <a href="lesson6/">Title</a></li>
                 <li>Lesson 7: <a href="lesson7/">Title</a></li>
