--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,10 +25,10 @@
     <nav>
         <ul>
             <li><a href="../index.html" id="hamBtn">&#9776; Home</a></li>
-            <li><a href="chamber/business.html"></a>Business Listings</li>
-            <li><a href="chamber/contactus.html"></a>Contact Us</li>
-            <li><a href="chamber/directory.html"></a>Directory</li>
-            <li><a href="chamber/sponsors.html"></a>Sponsors</li>
+            <li><a href="/chamber/business.html"></a>Business Listings</li>
+            <li><a href="/chamber/contactus.html"></a>Contact Us</li>
+            <li><a href="/chamber/directory.html"></a>Directory</li>
+            <li><a href="/chamber/sponsors.html"></a>Sponsors</li>
         </ul>
     </nav>
     <main>
