--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="home page setup for wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <link rel="icon" href="../chamber/images/favicon.ico">
+    <link rel="icon" href="/chamber/images/favicon.ico">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
