--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
     <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="styles/small.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="/chamber/styles/small.css">
+    <link rel="stylesheet" href="/chamber/styles/medium.css">
+    <link rel="stylesheet" href="/chamber/styles/large.css">
+    <link rel="stylesheet" href="/chamber/styles/normalize.css">
     <title>Seth Markle's Assignment Portal</title>
 </head>
 <body>    
@@ -20,6 +20,17 @@
         <div class="title">
             <h1>Flipton Chamber of Commerce</h1>
             <h2>We put the flip in Flipton.</h2>
+        </div>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="/chamber/images/fb.png" alt="fb icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="/chamber/images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="/chamber/images/instagram.jpg" alt="instagram icon">
+            </a>
         </div>
     </header>
     <nav>
