--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="home page setup for wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="/chamber/styles/small.css">
-    <link rel="stylesheet" href="/chamber/styles/medium.css">
-    <link rel="stylesheet" href="/chamber/styles/large.css">
-    <link rel="stylesheet" href="/chamber/styles/normalize.css">
+    <link rel="icon" href="../chamber/images/favicon.ico">
+    <link rel="stylesheet" href="../chamber/styles/small.css">
+    <link rel="stylesheet" href="../chamber/styles/medium.css">
+    <link rel="stylesheet" href="../chamber/styles/large.css">
+    <link rel="stylesheet" href="../chamber/styles/normalize.css">
     <title>Seth Markle's Assignment Portal</title>
 </head>
 <body>    
@@ -19,11 +19,10 @@
         <img src="../chamber/images/index.png" alt="">
         <div class="title">
             <h1>Flipton Chamber of Commerce</h1>
-            <h2>We put the flip in Flipton.</h2>
         </div>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="/chamber/images/fb.png" alt="fb icon">
+                <img src="/chamber/images/fb.png" alt="facebook icon">
             </a>
             <a href="https://twitter.com" target="_blank">
                 <img src="/chamber/images/twitter.png" alt="twitter icon">
@@ -36,38 +35,21 @@
     <nav>
         <ul>
             <li><a href="../index.html" id="hamBtn">&#9776; Home</a></li>
-            <li><a href="/chamber/business.html"></a>Business Listings</li>
-            <li><a href="/chamber/contactus.html"></a>Contact Us</li>
-            <li><a href="/chamber/directory.html"></a>Directory</li>
-            <li><a href="/chamber/sponsors.html"></a>Sponsors</li>
+            <li><a href="../chamber/directory.html"></a>Directory</li>
+            <li><a href="../chamber/discover.html"></a>Discover</li>
+            <li><a href="../chamber/join.html"></a>Join</li>
+            <li><a href="../chamber/contact.html"></a>Contact</li>
         </ul>
     </nav>
     <main>
-        <h2>Information</h2>
-        <div class="temporary">
-            <p>Hero with site name and call to action</p>
-        </div>
-        <div class="temporary">
-            <p>News Release</p>
-        </div>
-        <div class="temporary">
-            <p>Join</p>
-        </div>
-        <div class="temporary">
-            <p>Event</p>
-        </div>
-        <div class="temporary">
-            <p>Weather</p>
-        </div>
-        <div class="temporary">
-            <p>Spotlight 1</p>
-        </div>
-        <div class="temporary">
-            <p>Spotlight 2</p>
-        </div>
-        <div class="temporary">
-            <p>Spotlight 3</p>
-        </div>
+        <div id="hero">Hero with site name and call to action</div>
+        <div id="news release">News Release</div>
+        <div id="join">Join</div>
+        <div id="event">Event</div>
+        <div id="weather">Weather</div>
+        <div id="spotlight1">Spotlight 1</div>
+        <div id="spotlight2">Spotlight 2</div>
+        <div id="spotlight3">Spotlight 3</div>
     </main>
     <footer class="footer">
         <p>
