--- a/lesson5/bom.html
+++ b/lesson5/bom.html
@@ -1,29 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="Seth Markle" content="Book of Mormon DOM Manipulation">
-<title>DOM Manipulation</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="css/normalize.css" rel="stylesheet">
-<link href="css/small.css" rel="stylesheet">
-<link href="css/medium.css" rel="stylesheet">
-<link href="css/large.css" rel="stylesheet">   
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/main.css">
+    <script defer src="/scripts/activityscript.js"></script>
+    <title>DOM Manipulation Activity</title>
 </head>
+
 <body>
     <h1>📘 Book of Mormon - Top 25</h1>
     <main>
         <div class="input">
             <label>Enter Book and Chapter<br>
-                <input type="text" id="favchap" placeholder="Alma 5" required>                                
-                </label>
+                <input type="text" id="favchap" placeholder="Alma 5" required></label>
             <button type="submit">Add Chapter</button>
         </div>
         <div class="listcontainer">
             <ul class="list">
             </ul>
         </div>
-    </main>   
-<script src="scripts/script.js"></script>
+    </main>
 </body>
+
 </html>
