--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,17 +33,17 @@
         </div>
     </header>
     <nav>
-        <ul>
+        <ul class="navigation">
             <li><a href="../index.html" id="hamBtn">&#9776; Home</a></li>
-            <li><a href="../chamber/directory.html"></a>Directory</li>
-            <li><a href="../chamber/discover.html"></a>Discover</li>
-            <li><a href="../chamber/join.html"></a>Join</li>
-            <li><a href="../chamber/contact.html"></a>Contact</li>
+            <li><a href="#"></a>Directory</li>
+            <li><a href="#"></a>Discover</li>
+            <li><a href="#"></a>Join</li>
+            <li><a href="#"></a>Contact</li>
         </ul>
     </nav>
     <main>
         <div id="hero">Hero with site name and call to action</div>
-        <div id="news release">News Release</div>
+        <div id="news">News</div>
         <div id="join">Join</div>
         <div id="event">Event</div>
         <div id="weather">Weather</div>
