--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
                 <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page Build</a></li>
                 <li>Lesson 5: <a href="lesson5/bom.html">DOM Manipulation</a></li>
-                <li>Lesson 5: <a href="lesson5/">Title</a></li>
+                <li>Lesson 5: <a href="lesson5/">Chamber Home Page Continued</a></li>
                 <li>Lesson 6: <a href="lesson6/">Title</a></li>
                 <li>Lesson 7: <a href="lesson7/">Title</a></li>
                 <li>Lesson 8: <a href="lesson8/">Title</a></li>
