--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,7 +53,10 @@
     </main>
     <footer class="footer">
         <p>
-            &copy; Winter Term 2022 | Seth Markle | Ohio | <span>BYUI Online Learning</span>
+            552 Flipton Way, OH 82281 |
+            867-5309 |
+            fliptonchamber.org |
+            &copy; Winter Term 2022 | Seth Markle | <span>BYUI Online Learning</span>
         </p>
         <p class="last-update" id="lastModified"></p>
     </footer>
