--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,13 +22,13 @@
         </div>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="/chamber/images/fb.png" alt="facebook icon">
+                <img src="/chamber/images/fb.png" alt="">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="/chamber/images/twitter.png" alt="twitter icon">
+                <img src="/chamber/images/twitter.png" alt="">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="/chamber/images/instagram.jpg" alt="instagram icon">
+                <img src="/chamber/images/instagram.jpg" alt="">
             </a>
         </div>
     </header>
