--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,6 +35,7 @@
     <nav>
         <ul class="navigation">
             <li><a href="../index.html" id="hamBtn">&#9776; Home</a></li>
+            <li><a href="#"></a>Home</li>
             <li><a href="#"></a>Directory</li>
             <li><a href="#"></a>Discover</li>
             <li><a href="#"></a>Join</li>
