--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,8 @@
         }
         .grid-item {
           background-color: white;
-          border: 2px solid #70A288;
+          border: 2px solid #04395E;
+          color: #70A288;
           padding: 125px;
           font-size: 20px;
           text-align: center;
