--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,7 +59,6 @@
         </ul>
     </nav>
     <main>
-
         <div class="grid-container">
             <div class="grid-item">Event</div>
             <div class="grid-item">Hero with site name and call to action</div>
@@ -70,6 +69,10 @@
             <div class="grid-item">News Release</div>
             <div class="grid-item">Spotlight 3</div>
           </div>
+        <div class="hero">
+            <img class="banner" src="/images/event.jpg" alt="">
+            <button class="call-to-action">Join the Flipton Chamber of Commerece</button>
+        </div>  
     </main>
     <footer class="footer">
         <p>
