--- a/chamber/index.html
+++ b/chamber/index.html
@@ -2,92 +2,102 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Seth Markle">
     <meta name="description" content="home page setup for wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet"> 
-    <link rel="icon" href="../chamber/images/favicon.ico">
-    <link rel="stylesheet" href="../chamber/styles/small.css">
-    <link rel="stylesheet" href="../chamber/styles/medium.css">
-    <link rel="stylesheet" href="../chamber/styles/large.css">
-    <link rel="stylesheet" href="../chamber/styles/normalize.css">
-    <title>Seth Markle's Assignment Portal</title>
-    <style>
-        .grid-container {
-          display: grid;
-          grid-template-columns: auto auto auto;
-          background-color: #04395E;
-          padding: 10px;
-        }
-        .grid-item {
-          background-color: white;
-          border: 2px solid #04395E;
-          color: #70A288;
-          padding: 125px;
-          font-size: 20px;
-          text-align: center;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
+    <link rel="icon" href="/chamber/images/favicon.ico">
+    <link rel="stylesheet" href="/chamber/styles/normalize.css">
+    <link rel="stylesheet" href="/chamber/styles/small.css">
+    <link rel="stylesheet" href="/chamber/styles/medium.css">
+    <link rel="stylesheet" href="/chamber/styles/large.css">
+    <title>Flipton Chamber of Commerce</title>
 </head>
-<body>    
-    <header>
-        <img src="../chamber/images/index.png" alt="">
-        <div class="title">
+<header>
+    <div class="main-logo">
+            <a href="index.html">
+                <img src="/chamber/images/index.png" alt="logo">
+            </a>
+        <section>
             <h1>Flipton Chamber of Commerce</h1>
-        </div>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="/chamber/images/fb.png" alt="">
-            </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="/chamber/images/twitter.png" alt="">
-            </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="/chamber/images/instagram.jpg" alt="">
-            </a>
-        </div>
-    </header>
+        </section>
+    </div>
+    <div class="social">
+        <a href="https://facebook.com" target="_blank">
+            <img src="images/fb.png" alt="fb icon">
+        </a>
+        <a href="https://www.linkedin.com/" target="_blank">
+            <img src="/chamber/images/linkdin.jpg" alt="in icon">
+        </a>
+    </div>
+    <div id="datebox">
+        <p id="p1"></p>
+        <script>
+            var date = new Date();
+            document.getElementById("p1").innerHTML = date;
+        </script>
+    </body>
+    </html>
+    </div>
     <nav>
         <ul class="navigation">
-            <li><a href="../index.html" id="hamBtn">&#9776; Home</a></li>
-            <li><a href="#"></a>Home</li>
-            <li><a href="#"></a>Directory</li>
-            <li><a href="#"></a>Discover</li>
-            <li><a href="#"></a>Join</li>
-            <li><a href="#"></a>Contact</li>
+            <li><a id="menu"></a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Directory</a></li>
+            <li><a href="#">Join</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </nav>
-    <main>
-        <div class="grid-container">
-            <div class="grid-item">Event</div>
-            <div class="grid-item">Hero with site name and call to action</div>
-            <div class="grid-item">Spotlight 1</div>  
-            <div class="grid-item">Weather</div>
-            <div class="grid-item">Spotlight 2</div>
-            <div class="grid-item">Join</div>  
-            <div class="grid-item">News Release</div>
-            <div class="grid-item">Spotlight 3</div>
-          </div>
-        <div class="hero">
-            <img class="banner" src="/images/event.jpg" alt="">
-            <button class="call-to-action">Join the Flipton Chamber of Commerece</button>
-        </div>  
-    </main>
-    <footer class="footer">
-        <p>
-            552 Flipton Way, OH 82281 |
-            867-5309 |
-            fliptonchamber.org |
-            &copy; Winter Term 2022 | Seth Markle | <span>BYUI Online Learning</span>
+</header>
+<main>
+    <div id="hero">Hero image and call to action</div>
+    <div id="event">Events</div>
+    <div id="weather">Weather</div>
+    <div id="join">Join Us</div>
+    <div id="news">News</div>
+    <div id="spotlights">
+    <div>Spotlight 1</div>
+    <div>Spotlight 2</div>
+    <div>Spotlight 3</div>
+    </div>
+</main>
+<footer>
+    <section>
+        <h6>Info</h6>
+        <div>
+            <img src="/chamber/images/index.png" alt="2nd logo">
+        </div>
+        <ul>
+            <li><h2>Flipton Chamber of Commerce</h2></li>
+            <li><p>552 Flipton Way</p></li>
+            <li><p>Flipton Ohio, 44103</p></li>
+        </ul>
+    </section>
+    <section>
+        <p>fliptonchamber.org
+        <p>216-867-5309
+        <p><a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a></p>
+    </section>
+
+    <hr>
+    <section>
+        <h6>Info</h6>
+        <p>&copy;<span id="currentyear"></span> 2022 Flipton Chamber
+            <a>|</a><br> Seth Markle
+            <a>|</a><br>WDD 230 Project
+            <a>|</a><br>Last Modification:         
+            <p id="p1"></p>
+            <script>
+                var date = new Date();
+                document.getElementById("p1").innerHTML = date;
+            </script>
+        </body>
+        </html>
         </p>
-        <p class="last-update" id="lastModified"></p>
-    </footer>
-    <h2>Last Updated</h2>
-    <p id="p1"></p>
-    <script>
-        var date = new Date();
-        document.getElementById("p1").innerHTML = date;
-    </script>
-</body>
+    </section>
+</footer>
 </html>
