--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <ul>
                 <li>Lesson 2: <a href="lesson2/designprinciples.html">Principles of Design</a></li>
                 <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
-                <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page Build</a></li>
+                <li>Lesson 4: <a href="/chamber/index.html">Chamber Home Page Build</a></li>
                 <li>Lesson 5: <a href="lesson5/bom.html">DOM Manipulation</a></li>
                 <li>Lesson 5: <a href="lesson5/">Chamber Home Page Continued</a></li>
                 <li>Lesson 6: <a href="lesson6/">Title</a></li>
