--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,7 @@
 </head>
 <header>
     <div class="main-logo">
-            <a href="/chamber/index.html">
+            <a href="index.html">
                 <img src="/chamber/images/index.png" alt="logo">
             </a>
         <section>
@@ -27,7 +27,7 @@
     </div>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="/chamber/images/fb.png" alt="fb icon">
+            <img src="images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
             <img src="/chamber/images/linkdin.jpg" alt="in icon">
