--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
             <img src="images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="/chamber/images/linkdin.jpg" alt="in icon">
+            <img src="chamber/images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
