--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
 <header>
     <div class="main-logo">
             <a href="index.html">
-                <img src="/chamber/images/index.png" alt="logo">
+                <img src="../chamber/images/index.png" alt="logo">
             </a>
         <section>
             <h1>Flipton Chamber of Commerce</h1>
@@ -30,7 +30,7 @@
             <img src="images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="chamber/images/linkdin.jpg" alt="in icon">
+            <img src="images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
