--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Seth Markle">
-    <meta name="description" content="home page setup for wdd 230">
+    <meta name="description" content="chamber layout wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/small.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="/chamber/styles/normalize.css">
+    <link rel="stylesheet" href="/chamber/styles/small.css">
+    <link rel="stylesheet" href="/chamber/styles/medium.css">
+    <link rel="stylesheet" href="/chamber/styles/large.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
@@ -39,8 +39,6 @@
             var date = new Date();
             document.getElementById("p1").innerHTML = date;
         </script>
-    </body>
-    </html>
     </div>
     <nav>
         <ul class="navigation">
@@ -82,7 +80,6 @@
         <p>216-867-5309
         <p><a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a></p>
     </section>
-
     <hr>
     <section>
         <h6>Info</h6>
@@ -95,9 +92,6 @@
                 var date = new Date();
                 document.getElementById("p1").innerHTML = date;
             </script>
-        </body>
-        </html>
-        </p>
     </section>
 </footer>
 </html>
