--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <li>Lesson 4: <a href="chamber/index.html">Chamber Home Page Build</a></li>
                 <li>Lesson 5: <a href="lesson5/bom.html">DOM Manipulation</a></li>
                 <li>Lesson 5: <a href="lesson5/index.html">Chamber Home Page Continued</a></li>
-                <li>Lesson 6: <a href="lesson6/">Title</a></li>
-                <li>Lesson 7: <a href="lesson7/">Title</a></li>
+                <li>Lesson 6: <a href="lesson6/">Responsive Design</a></li>
+                <li>Lesson 7: <a href="lesson7/lazyload.html">Progressive Loading of Images</a></li>
                 <li>Lesson 8: <a href="lesson8/">Title</a></li>
                 <li>Lesson 9: <a href="lesson9/">Title</a></li>
                 <li>Lesson 10: <a href="lesson10/">Title</a></li>
