--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Seth Markle">
-    <meta name="description" content="home page setup for wdd 230">
+    <meta name="description" content="chamber page for wdd 230">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="/chamber/styles/normalize.css">
-    <link rel="stylesheet" href="/chamber/styles/small.css">
-    <link rel="stylesheet" href="/chamber/styles/medium.css">
-    <link rel="stylesheet" href="/chamber/styles/large.css">
+    <link rel="icon" href="../chamber/images/favicon.ico">
+    <link rel="stylesheet" href="../chamber/styles/normalize.css">
+    <link rel="stylesheet" href="../chamber/styles/small.css">
+    <link rel="stylesheet" href="../chamber/styles/medium.css">
+    <link rel="stylesheet" href="../chamber/styles/large.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
     <div class="main-logo">
-            <a href="index.html">
+            <a href="../chamber/index.html">
                 <img src="../chamber/images/index.png" alt="logo">
             </a>
         <section>
@@ -27,10 +27,10 @@
     </div>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="images/fb.png" alt="fb icon">
+            <img src="../chamber/images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="images/linkdin.jpg" alt="in icon">
+            <img src="../chamber/images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
@@ -53,12 +53,11 @@
 </header>
     <main>
         <div id="hero">
-            <img class="banner" src="/chamber/images/hero.jpg" alt="Welcome to Flipton!">
-                   <button class="call-to-action">Join the OCC</button>
+            <img class="banner" src="../chamber/images/hero.jpg">
+            <button class="call-to-action">Join Flipton</button>
         </div>
-        <div id="event">            
-				<b>Upcoming Events.</b><br>
-                DESCRIPTION
+        <div id="event">
+            <img class="banner" src="../chamber/images/event.jpg">
         </div>
         <div id="weather"><h3>Todays Weather</h3>
             <h3 id="temperature">°F</h3>
@@ -71,9 +70,10 @@
  
             </p>
         </div>
-        <div id="joinbutton">
-            <button class="join-us">Click to join!</button>
-            <p class="text-join">Come see what we have to offer.</p>
+        <div id="join">
+            <p>
+                INFORMATION
+            </p>
         </div>
         <div id="spotlight 1"><b>INFORMATION</b>
             
@@ -89,7 +89,7 @@
         <section>
             <h6>Info</h6>
             <div>
-                <img src="/chamber/images/index.png" alt="2nd logo">
+                <img src="../chamber/images/index.png" alt="2nd logo">
             </div>
             <ul>
                 <li><h2>Flipton Chamber of Commerce</h2></li>
