--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -14,27 +14,27 @@
     <body>
 		<h1>Progressive Loading of Images</h1>
         <picture>
-            <img src='/lesson7/images/beach.jpg' data-src="images/beach_300x400.jpg" alt="Flipton Beach"/>
-            <P>Flipton Beach</P>
+            <img src='/lesson7/images/beach.jpg' data-src="images/beach_300x400.jpg" alt="Lazyload Image"/>
+            <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/formerstation.jpg' data-src="/lesson7/images/formerstation_300x400.jpg" alt="Converted Train Station"/>
-            <P>Flipton Beach</P>
+            <img src='/lesson7/images/formerstation.jpg' data-src="/lesson7/images/formerstation_300x400.jpg" alt="Lazyload Image"/>
+            <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/outdoor.jpg' data-src="/lesson7/images/outdoor_300x400.jpg" alt="The Great Outdoors"/>
-            <P>Flipton Beach</P>
+            <img src='/lesson7/images/outdoor.jpg' data-src="/lesson7/images/outdoor_300x400.jpg" alt="Lazyload Image"/>
+            <P>Lazyload Image</P>
         </picture>
-        <picture><img src='/lesson7/images/station2jpg.jpg' data-src="/lesson7/images/station2jpg_300x400.jpg" alt="Old Train Station"/>
-            <P>Flipton Beach</P>
-        </picture>
-        <picture>
-            <img src='/lesson7/images/thankyou.jpg' data-src="/lesson7/images/thankyou_300x400.jpg" alt="Thank You for Coming"/>
-            <P>Flipton Beach</P>
+        <picture><img src='/lesson7/images/station2jpg.jpg' data-src="/lesson7/images/station2jpg_300x400.jpg" alt="Lazyload Image"/>
+            <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/view.jpg' data-src="/lesson7/images/view_300x400.jpg" alt="The Forest of Flipton"/>
-            <P>Flipton Beach</P>
+            <img src='/lesson7/images/thankyou.jpg' data-src="/lesson7/images/thankyou_300x400.jpg" alt="Lazyload Image"/>
+            <P>Lazyload Image</P>
+        </picture>
+        <picture>
+            <img src='/lesson7/images/view.jpg' data-src="/lesson7/images/view_300x400.jpg" alt="Lazyload Image"/>
+            <P>Lazyload Image</P>
         </picture>
         <script src="/scripts/lazyscripts.js"></script>
     </body>
