--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <li>Lesson 5: <a href="lesson5/index.html">Chamber Home Page Continued</a></li>
                 <li>Lesson 6: <a href="lesson6/">Responsive Design</a></li>
                 <li>Lesson 7: <a href="lesson7/lazyload.html">Progressive Loading of Images</a></li>
+                <li>Lesson 7: <a href="/chamber/discover.html">The Discover Page - Image Section</a></li>
                 <li>Lesson 8: <a href="lesson8/">Title</a></li>
                 <li>Lesson 9: <a href="lesson9/">Title</a></li>
                 <li>Lesson 10: <a href="lesson10/">Title</a></li>
