--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <ul>
                 <li>Lesson 2: <a href="lesson2/designprinciples.html">Principles of Design</a></li>
                 <li>Lesson 3: <a href="lesson3/index.html">Website Planning Document</a></li>
-                <li>Lesson 4: <a href="/chamber/index.html">Chamber Home Page Build</a></li>
+                <li>Lesson 4: <a href="../chamber/index.html">Chamber Home Page Build</a></li>
                 <li>Lesson 5: <a href="lesson5/bom.html">DOM Manipulation</a></li>
-                <li>Lesson 5: <a href="lesson5/index.html">Chamber Home Page Continued</a></li>
+                <li>Lesson 5: <a href="../chamber/chamber.html">Chamber Home Page Continued</a></li>
                 <li>Lesson 6: <a href="lesson6/">Responsive Design</a></li>
                 <li>Lesson 7: <a href="lesson7/lazyload.html">Progressive Loading of Images</a></li>
                 <li>Lesson 7: <a href="../chamber/discover.html">The Discover Page - Image Section</a></li>
