--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -6,36 +6,36 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-        <link rel="shortcut icon" href="/lesson7/images/favicon.ico">
+        <link rel="shortcut icon" href="../lesson7/images/favicon.ico">
 		<meta name="progressive loading of images" content="lazy loading">
         <title>W07 Lazy Loading</title>
-        <link rel="stylesheet" href="/lesson7/styles/lazy.css">
+        <link rel="stylesheet" href="../lesson7/styles/lazy.css">
     </head>
     <body>
 		<h1>Progressive Loading of Images</h1>
         <picture>
-            <img src='/lesson7/images/beach.jpg' data-src="images/beach_300x400.jpg" alt="Lazyload Image"/>
+            <img src='../lesson7/images/beach.jpg' data-src="images/beach_300x400.jpg" alt="Lazyload Image"/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/formerstation.jpg' data-src="/lesson7/images/formerstation_300x400.jpg" alt="Lazyload Image"/>
+            <img src='../lesson7/images/formerstation.jpg' data-src="/lesson7/images/formerstation_300x400.jpg" alt="Lazyload Image"/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/outdoor.jpg' data-src="/lesson7/images/outdoor_300x400.jpg" alt="Lazyload Image"/>
+            <img src='../lesson7/images/outdoor.jpg' data-src="/lesson7/images/outdoor_300x400.jpg" alt="Lazyload Image"/>
             <P>Lazyload Image</P>
         </picture>
         <picture><img src='/lesson7/images/station2jpg.jpg' data-src="/lesson7/images/station2jpg_300x400.jpg" alt="Lazyload Image"/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/thankyou.jpg' data-src="/lesson7/images/thankyou_300x400.jpg" alt="Lazyload Image"/>
+            <img src='../lesson7/images/thankyou.jpg' data-src="/lesson7/images/thankyou_300x400.jpg" alt="Lazyload Image"/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/view.jpg' data-src="/lesson7/images/view_300x400.jpg" alt="Lazyload Image"/>
+            <img src='../lesson7/images/view.jpg' data-src="/lesson7/images/view_300x400.jpg" alt="Lazyload Image"/>
             <P>Lazyload Image</P>
         </picture>
-        <script src="/scripts/lazyscripts.js"></script>
+        <script src="../lesson7/scripts/lazyscripts.js"></script>
     </body>
 </html>
