--- a/chamber/index.html
+++ b/chamber/index.html
@@ -9,17 +9,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="../chamber/images/favicon.ico">
-    <link rel="stylesheet" href="../chamber/styles/normalize.css">
-    <link rel="stylesheet" href="../chamber/styles/small.css">
-    <link rel="stylesheet" href="../chamber/styles/medium.css">
-    <link rel="stylesheet" href="../chamber/styles/large.css">
+    <link rel="icon" href="/chamber/images/favicon.ico">
+    <link rel="stylesheet" href="/chamber/styles/normalize.css">
+    <link rel="stylesheet" href="/chamber/styles/small.css">
+    <link rel="stylesheet" href="/chamber/styles/medium.css">
+    <link rel="stylesheet" href="/chamber/styles/large.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
     <div class="main-logo">
             <a href="index.html">
-                <img src="../chamber/images/index.png" alt="logo">
+                <img src="/chamber/images/index.png" alt="logo">
             </a>
         <section>
             <h1>Flipton Chamber of Commerce</h1>
@@ -27,10 +27,10 @@
     </div>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="images/fb.png" alt="fb icon">
+            <img src="/chamber/images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="images/linkdin.jpg" alt="in icon">
+            <img src="/chamber/images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
@@ -43,8 +43,8 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="#">Discover</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/discover.html">Discover</a></li>
             <li><a href="#">Directory</a></li>
             <li><a href="#">Join</a></li>
             <li><a href="#">Contact</a></li>
