--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -43,8 +43,8 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../join.html">Discover</a></li>
+            <li><a href="/chamber.html">Home</a></li>
+            <li><a href="/chamber/discover.html">Discover</a></li>
             <li><a href="#">Directory</a></li>
             <li><a href="#">Join</a></li>
             <li><a href="#">Contact</a></li>
