--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-    <link rel="icon" href="/chamber/images/favicon.ico">
-    <link rel="stylesheet" href="/chamber/styles/normalize.css">
-    <link rel="stylesheet" href="/chamber/styles/small.css">
-    <link rel="stylesheet" href="/chamber/styles/medium.css">
-    <link rel="stylesheet" href="/chamber/styles/large.css">
+    <link rel="icon" href="../chamber/images/favicon.ico">
+    <link rel="stylesheet" href="../chamber/styles/normalize.css">
+    <link rel="stylesheet" href="../chamber/styles/small.css">
+    <link rel="stylesheet" href="../chamber/styles/medium.css">
+    <link rel="stylesheet" href="../chamber/styles/large.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
@@ -43,7 +43,7 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="/chamber.html">Home</a></li>
+            <li><a href="/chamber/chamber.html">Home</a></li>
             <li><a href="/chamber/discover.html">Discover</a></li>
             <li><a href="#">Directory</a></li>
             <li><a href="#">Join</a></li>
@@ -53,11 +53,11 @@
 </header>
     <main>
         <div id="hero">
-            <img class="banner" src="../chamber/images/hero.jpg">
+            <img class="banner" src="/chamber/images/hero.jpg">
             <button class="call-to-action">Join Flipton</button>
         </div>
         <div id="event">
-            <img class="banner" src="../chamber/images/event.jpg">
+            <img class="banner" src="/chamber/images/event.jpg">
         </div>
         <div id="weather"><h3>Todays Weather</h3>
             <h3 id="temperature">°F</h3>
@@ -89,7 +89,7 @@
         <section>
             <h6>Info</h6>
             <div>
-                <img src="../chamber/images/index.png" alt="2nd logo">
+                <img src="/chamber/images/index.png" alt="2nd logo">
             </div>
             <ul>
                 <li><h2>Flipton Chamber of Commerce</h2></li>
