--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -53,11 +53,11 @@
 </header>
     <main>
         <div id="hero">
-            <img class="banner" src="/chamber/images/hero.jpg">
+            <img class="banner" src="../chamber/images/hero.jpg">
             <button class="call-to-action">Join Flipton</button>
         </div>
         <div id="event">
-            <img class="banner" src="/chamber/images/event.jpg">
+            <img class="banner" src="../chamber/images/event.jpg">
         </div>
         <div id="weather"><h3>Todays Weather</h3>
             <h3 id="temperature">°F</h3>
