--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,7 @@
 </head>
 <header>
     <div class="main-logo">
-            <a href="index.html">
+            <a href="/chamber/index.html">
                 <img src="/chamber/images/index.png" alt="logo">
             </a>
         <section>
