--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -51,6 +51,7 @@
         </ul>
     </nav>
 </header>
+<body>
     <main>
         <div id="hero">
             <img class="banner" src="../chamber/images/hero.jpg">
@@ -58,21 +59,27 @@
         </div>
         <div id="event">
             <img class="banner" src="../chamber/images/event.jpg">
+        <p>
+            <h2>join us at the community center on</h2><br>
+            <h2>March 25th for the community bazzar.</h2><br>
+        </p>
         </div>
-        <div id="weather"><h3>Todays Weather</h3>
-            <h3 id="temperature">°F</h3>
-            <h4 id="description-temperature">Description</h4>
-            <hr>
-            <p id="wind-speed">Wind Speed</p></div>
+        <div id="weather"><h2>Todays Weather</h2>
+            <h2 id="temperature">°F</h2>
+            <p id="wind-speed">Wind Speed</p>
+        </div>
         <div id="news">
-            <span id="news-date"><b>DATE</b></span>
+            <span id="news-date"><b>News</b></span>
             <p>INFORMATION
  
             </p>
         </div>
         <div id="join">
+            <button class="call-to-action">Join Flipton</button>
             <p>
-                INFORMATION
+               Join the Flipton Chamber of Commerce<br>
+               and see how to help the area.<br>
+               See how the chamber can help you.
             </p>
         </div>
         <div id="spotlight 1"><b>INFORMATION</b>
@@ -85,11 +92,12 @@
             
         </div>
     </main>
+</body>
     <footer>
         <section>
             <h6>Info</h6>
             <div>
-                <img src="/chamber/images/index.png" alt="2nd logo">
+                <img src="../chamber/images/index.png" alt="2nd logo">
             </div>
             <ul>
                 <li><h2>Flipton Chamber of Commerce</h2></li>
