--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -19,7 +19,7 @@
 <header>
     <div class="main-logo">
             <a href="/chamber/index.html">
-                <img src="/chamber/images/index.png" alt="logo">
+                <img src="../chamber/images/index.png" alt="logo">
             </a>
         <section>
             <h1>Flipton Chamber of Commerce</h1>
