--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -11,9 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <link rel="icon" href="../chamber/images/favicon.ico">
     <link rel="stylesheet" href="../chamber/styles/normalize.css">
-    <link rel="stylesheet" href="../chamber/styles/small.css">
-    <link rel="stylesheet" href="../chamber/styles/medium.css">
-    <link rel="stylesheet" href="../chamber/styles/large.css">
+    <link rel="stylesheet" href="../chamber/styles/smallchamber.css">
+    <link rel="stylesheet" href="../chamber/styles/mediumchamber.css">
+    <link rel="stylesheet" href="../chamber/styles/largechamber.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
