--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W08 Activity - Table build</title>
     <meta name="description" content="WDD 230 - Weekly assignment">
-    <link rel="stylesheet" href="/lesson8/styles/normalize.css">
-    <link rel="stylesheet" href="/lesson8/styles/table.css">
+    <link rel="stylesheet" href="../lesson8/styles/normalize.css">
+    <link rel="stylesheet" href="../lesson8/styles/table.css">
 
 </head>
 <body>
