--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -10,16 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
     <link rel="icon" href="../chamber/images/favicon.ico">
-    <link rel="stylesheet" href="../chamber/styles/normalize.css">
-    <link rel="stylesheet" href="../chamber/styles/small.css">
-    <link rel="stylesheet" href="../chamber/styles/medium.css">
-    <link rel="stylesheet" href="../chamber/styles/large.css">
+    <link rel="stylesheet" href="/chamber/styles/normalize.css">
+    <link rel="stylesheet" href="/chamber/styles/small.css">
+    <link rel="stylesheet" href="/chamber/styles/medium.css">
+    <link rel="stylesheet" href="/chamber/styles/large.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
     <div class="main-logo">
             <a href="/chamber/index.html">
-                <img src="../chamber/images/index.png" alt="logo">
+                <img src="/chamber/images/index.png" alt="logo">
             </a>
         <section>
             <h1>Flipton Chamber of Commerce</h1>
