--- a/chamber/chamber.html
+++ b/chamber/chamber.html
@@ -27,10 +27,10 @@
     </div>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="/chamber/images/fb.png" alt="fb icon">
+            <img src="../chamber/images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="/chamber/images/linkdin.jpg" alt="in icon">
+            <img src="../chamber/images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
