--- a/chamber/index.html
+++ b/chamber/index.html
@@ -67,7 +67,7 @@
     <section>
         <h6>Info</h6>
         <div>
-            <img src="images/index.png" alt="2nd logo">
+            <img src="/chamber/images/index.png" alt="2nd logo">
         </div>
         <ul>
             <li><h2>Flipton Chamber of Commerce</h2></li>
