--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,17 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-        <link rel="shortcut icon" href="../chamber/images/favicon.ico">
-		<meta name="progressive loading of images for the discover page" content="lazy loading">
-        <title>Discover Page</title>
-        <link rel="stylesheet" href="../chamber/styles/lazy.css">
-    </head>
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Seth Markle">
+    <meta name="description" content="chamber page for wdd 230">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
+    <link rel="icon" href="../chamber/images/favicon.ico">
+    <link rel="stylesheet" href="../chamber/styles/normalize.css">
+    <link rel="stylesheet" href="../chamber/styles/small.css">
+    <link rel="stylesheet" href="../chamber/styles/medium.css">
+    <link rel="stylesheet" href="../chamber/styles/large.css">
+    <link rel="stylesheet" href="../chamber/styles/lazy.css">
+    <title>Flipton Chamber of Commerce</title>
+</head>
+<header>
+    <div class="main-logo">
+                <img src="/chamber/images/index.png" alt="logo">
+            </a>
+        <section>
+            <h1>Flipton Chamber of Commerce</h1>
+        </section>
+    </div>
+    <div class="social">
+        <a href="https://facebook.com" target="_blank">
+            <img src="/chamber/images/fb.png" alt="fb icon">
+        </a>
+        <a href="https://www.linkedin.com/" target="_blank">
+            <img src="/chamber/images/linkdin.jpg" alt="in icon">
+        </a>
+    </div>
+    <div id="datebox">
+        <p id="p1"></p>
+        <script>
+            var date = new Date();
+            document.getElementById("p1").innerHTML = date;
+        </script>
+    </div>
+    <nav>
+        <ul class="navigation">
+            <li><a id="menu"></a></li>
+            <li><a href="/chamber/chamber.html">Home</a></li>
+            <li><a href="/chamber/discover.html">Discover</a></li>
+            <li><a href="#">Directory</a></li>
+            <li><a href="/chamber/join.html">Join</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 		<h1>Discover Page</h1>
         <picture>
             <img src='../chamber/images/beach.jpg' data-src="images/beach_300x400.jpg" alt="Flipton Beach"/>
@@ -37,5 +76,37 @@
             <P>The Forest of Flipton</P>
         </picture>
         <script src="..chamber/scripts/lazyscripts.js"></script>
+        <footer>
+            <section>
+                <h2>Info</h2>
+                <div>
+                    <img src="/chamber/images/index.png" alt="2nd logo">
+                </div>
+                <ul>
+                    <li><h2>Flipton Chamber of Commerce</h2></li>
+                    <li><p>552 Flipton Way</p></li>
+                    <li><p>Flipton Ohio, 44103</p></li>
+                </ul>
+            </section>
+            <section>
+                <p>fliptonchamber.org
+                <p>216-867-5309
+                <p><a href="https://www.google.com/maps/place/Lakefront+Nature+Preserve/@41.543484,-81.6351623,15.67z/data=!4m13!1m7!3m6!1s0x8830ef2ee3686b2d:0xed04cb55f7621842!2sCleveland,+OH!3b1!8m2!3d41.49932!4d-81.6943605!3m4!1s0x8830f98613987e3d:0x82597554cd6b5de2!8m2!3d41.5457288!4d-81.6319206">Find us here!</a></p>
+            </section>
+            <hr>
+            <section>
+                <h6>Info</h6>
+                <p>&copy;<span id="currentyear"></span> 2022 Flipton Chamber
+                    <a>|</a><br> Seth Markle
+                    <a>|</a><br>WDD 230 Project
+                    <a>|</a><br>Last Modification:         
+                    <p id="p1"></p>
+                    <script>
+                        var date = new Date();
+                        document.getElementById("p1").innerHTML = date;
+                    </script>
+            </section>
+        </footer>
+        </html>
     </body>
 </html>
