--- a/chamber/join.html
+++ b/chamber/join.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../chamber/styles/small.css">
     <link rel="stylesheet" href="../chamber/styles/medium.css">
     <link rel="stylesheet" href="../chamber/styles/large.css">
+    <link rel="stylesheet" href="../chamber/styles/join.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
