--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -14,26 +14,26 @@
     <body>
 		<h1>Progressive Loading of Images</h1>
         <picture>
-            <img src='/lesson7/images/beach.jpg' data-src="/lesson7/images/beach_300x400.jpg" alt="Lazyload Image"/>
+            <img src='/lesson7/images/beach.jpg' data-src="/lesson7/images/beach_300x400.jpg"/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/formerstation.jpg' data-src="/lesson7/images/formerstation_300x400.jpg" alt="Lazyload Image"/>
+            <img src='/lesson7/images/formerstation.jpg' data-src="/lesson7/images/formerstation_300x400.jpg"/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/outdoor.jpg' data-src="/lesson7/images/outdoor_300x400.jpg" alt="Lazyload Image"/>
+            <img src='/lesson7/images/outdoor.jpg' data-src="/lesson7/images/outdoor_300x400.jpg"/>
             <P>Lazyload Image</P>
         </picture>
-        <picture><img src='/lesson7/images/station2jpg.jpg' data-src="/lesson7/images/station2jpg_300x400.jpg" alt="Lazyload Image"/>
-            <P>Lazyload Image</P>
-        </picture>
-        <picture>
-            <img src='/lesson7/images/thankyou.jpg' data-src="/lesson7/images/thankyou_300x400.jpg" alt="Lazyload Image"/>
+        <picture><img src='/lesson7/images/station2jpg.jpg' data-src="/lesson7/images/station2jpg_300x400.jpg"/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/view.jpg' data-src="/lesson7/images/view_300x400.jpg" alt="Lazyload Image"/>
+            <img src='/lesson7/images/thankyou.jpg' data-src="/lesson7/images/thankyou_300x400.jpg"/>
+            <P>Lazyload Image</P>
+        </picture>
+        <picture>
+            <img src='/lesson7/images/view.jpg' data-src="/lesson7/images/view_300x400.jpg"/>
             <P>Lazyload Image</P>
         </picture>
         <script src="/lesson7/scripts/lazyscripts.js"></script>
