--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -14,28 +14,28 @@
     <body>
 		<h1>Progressive Loading of Images</h1>
         <picture>
-            <img src='/lesson7/images/beach.jpg'/>
+            <img src='../lesson7/images/beach.jpg'/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/formerstation.jpg'/>
+            <img src='../lesson7/images/formerstation.jpg'/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/outdoor.jpg'/>
+            <img src='../lesson7/images/outdoor.jpg'/>
             <P>Lazyload Image</P>
         </picture>
-        <picture><img src='/lesson7/images/station2jpg.jpg'/>
-            <P>Lazyload Image</P>
-        </picture>
-        <picture>
-            <img src='/lesson7/images/thankyou.jpg'
+        <picture><img src='../lesson7/images/station2jpg.jpg'/>
             <P>Lazyload Image</P>
         </picture>
         <picture>
-            <img src='/lesson7/images/view.jpg'
+            <img src='../lesson7/images/thankyou.jpg'/>
             <P>Lazyload Image</P>
         </picture>
-        <script src="/lesson7/scripts/lazyscripts.js"></script>
+        <picture>
+            <img src='../lesson7/images/view.jpg'/>
+            <P>Lazyload Image</P>
+        </picture>
+        <script src="../lesson7/scripts/lazyscripts.js"></script>
     </body>
 </html>
