--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -6,10 +6,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gugi&display=swap" rel="stylesheet">    
-        <link rel="shortcut icon" href="/lesson7/images/favicon.ico">
+        <link rel="shortcut icon" href="../lesson7/images/favicon.ico">
 		<meta name="progressive loading of images" content="lazy loading">
         <title>W07 Lazy Loading</title>
-        <link rel="stylesheet" href="/lesson7/styles/lazy.css">
+        <link rel="stylesheet" href="../lesson7/styles/lazy.css">
     </head>
     <body>
 		<h1>Progressive Loading of Images</h1>
