--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,10 +43,10 @@
     <nav>
         <ul class="navigation">
             <li><a id="menu"></a></li>
-            <li><a href="/chamber/chamber.html">Home</a></li>
-            <li><a href="/chamber/discover.html">Discover</a></li>
+            <li><a href="../chamber/chamber.html">Home</a></li>
+            <li><a href="../chamber/discover.html">Discover</a></li>
             <li><a href="#">Directory</a></li>
-            <li><a href="/chamber/join.html">Join</a></li>
+            <li><a href="../chamber/join.html">Join</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
