--- a/chamber/join.html
+++ b/chamber/join.html
@@ -19,7 +19,7 @@
 </head>
 <header>
     <div class="main-logo">
-                <img src="/chamber/images/index.png" alt="logo">
+                <img src="../chamber/images/index.png" alt="logo">
             </a>
         <section>
             <h1>Flipton Chamber of Commerce</h1>
