--- a/chamber/join.html
+++ b/chamber/join.html
@@ -27,10 +27,10 @@
     </div>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="/chamber/images/fb.png" alt="fb icon">
+            <img src="../chamber/images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="/chamber/images/linkdin.jpg" alt="in icon">
+            <img src="../chamber/images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
@@ -102,7 +102,7 @@
     <footer>
         <section>
             <div>
-                <img src="/chamber/images/index.png" alt="2nd logo">
+                <img src="../chamber/images/index.png" alt="2nd logo">
             </div>
             <ul>
                 <li><h2>Flipton Chamber of Commerce</h2></li>
