--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../chamber/styles/small.css">
     <link rel="stylesheet" href="../chamber/styles/medium.css">
     <link rel="stylesheet" href="../chamber/styles/large.css">
-    <link rel="stylesheet" href="../chamber/styles/lazy.css">
+    <link rel="stylesheet" href="../chamber/styles/discover.css">
     <title>Flipton Chamber of Commerce</title>
 </head>
 <header>
@@ -27,10 +27,10 @@
     </div>
     <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="/chamber/images/fb.png" alt="fb icon">
+            <img src="../chamber/images/fb.png" alt="fb icon">
         </a>
         <a href="https://www.linkedin.com/" target="_blank">
-            <img src="/chamber/images/linkdin.jpg" alt="in icon">
+            <img src="../chamber/images/linkdin.jpg" alt="in icon">
         </a>
     </div>
     <div id="datebox">
@@ -51,7 +51,6 @@
         </ul>
     </nav>
 </header>
-		<h1>Discover Page</h1>
         <picture>
             <img src='../chamber/images/beach.jpg' data-src="images/beach_300x400.jpg" alt="Flipton Beach"/>
             <P>Flipton Beach</P>
@@ -78,9 +77,9 @@
         <script src="..chamber/scripts/lazyscripts.js"></script>
         <footer>
             <section>
-                <h2>Info</h2>
+                <h6>Info</h6>
                 <div>
-                    <img src="/chamber/images/index.png" alt="2nd logo">
+                    <img src="../chamber/images/index.png" alt="2nd logo">
                 </div>
                 <ul>
                     <li><h2>Flipton Chamber of Commerce</h2></li>
@@ -108,5 +107,3 @@
             </section>
         </footer>
         </html>
-    </body>
-</html>
