--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <li>Lesson 7: <a href="chamber/discover.html">The Discover Page - Image Section</a></li>
                 <li>Lesson 8: <a href="lesson8/tablebuild.html">Table Build</a></li>
                 <li>Lesson 8: <a href="chamber/join.html">Join Page</a></li>
-                <li>Lesson 9: <a href="lesson9/">Title</a></li>
+                <li>Lesson 9: <a href="lesson9/prophets.html">Working with JSON data and the Fetch API</a></li>
                 <li>Lesson 10: <a href="lesson10/">Title</a></li>
                 <li>Lesson 11: <a href="lesson11/">Title</a></li>
             </ul>
