--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li>Lesson 8: <a href="chamber/join.html">Join Page</a></li>
                 <li>Lesson 9: <a href="lesson9/prophets.html">Working with JSON data and the Fetch API</a></li>
                 <li>Lesson 9: <a href="chamber/directory.html">The Business Directory Page</a></li>
-                <li>Lesson 10: <a href="lesson10/">Title</a></li>
+                <li>Lesson 10: <a href="lesson10/weatherapi.html">Title</a></li>
                 <li>Lesson 11: <a href="lesson11/">Title</a></li>
             </ul>
         </main>
